--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6"
   },
