--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.6",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +21,7 @@
     "react": "^18.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6"
   },
