Calendar solaping and charts for overview

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
