--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.6",
@@ -41,6 +42,7 @@
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
@@ -48,6 +50,7 @@
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
+    "zod": "^3.25.13",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
