--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.6",
+    "@tanstack/react-query": "^5.77.1",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,7 +54,7 @@
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
-    "zod": "^3.25.13",
+    "zod": "^3.25.28",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
