--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
     "zod": "^3.25.28",
