--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
+    "uuid": "^11.1.0",
     "zod": "^3.25.28",
     "zustand": "^5.0.4"
   },
