--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
